Change div into table for html and DRY CSS

--- a/Contraction-Timer/index.html
+++ b/Contraction-Timer/index.html
@@ -12,9 +12,9 @@
 <div class="parent-container">
   <div class="child-container">
     <header>
-        <div ><img class="symbol" src="./back.svg" alt="back arrow icon"></div>
+        <div ><img class="symbol" src="./img/back.svg" alt="back arrow icon"></div>
         <div class="contraction">Contraction timer</div>
-        <div><img class="symbol" src="./bell.svg" alt="foward arrow icon"></div>
+        <div><img class="symbol" src="./img/bell.svg" alt="foward arrow icon"></div>
     </header>
 
     <div class="first-container">
@@ -23,41 +23,40 @@
         <div class="contraction-time">7 min 32 sec</div>
         <div><button>Stop timing</button></div>
     </div> 
-
    
-    <div class="second-container">
-        <div class="description-line">
-          <div class="length">Length</div>
-          <div class="time">Time apart</div>
-          <div class="start">Start & end time</div>
-        </div>
+    <table class="second-container">
+        <tr class="description-line">
+          <th>Length</th>
+          <th>Time apart</th>
+          <th>Start & end time</th>
+        </tr>
 
-        <div class="f-line" >
-            <div class="first-row">6s</div>
-            <div class="second-row">3 min 21 sec</div>
-            <div>4:49pm - 4:49pm</div>
-        </div>
+        <tr class="colour-line">
+          <td>6s</td>
+          <td>3 min 21 sec</td>
+          <td>4:49pm -4:49pm</td>
+        </tr>
+      
+        <tr class="white-line" >
+          <td>4s</td>
+          <td>16 min 22 sec</td>
+          <td>4:49pm - 4:49pm</td>
+        </tr>
 
-        <div class="s-line" >
-            <div class="first-row">4s</div>
-            <div class="second-row">16 min 22 sec</div>
-            <div>4:49pm - 4:49pm</div>
-        </div>
+        <tr class="colour-line">
+          <td>6s</td>
+          <td>7 min 41 sec</td>
+          <td>4:49pm - 4:49pm</td>
+        </tr>
 
-        <div class="t-line" >
-            <div class="first-row">6s</div>
-            <div class="second-row">7 min 41 sec</div>
-            <div>4:49pm - 4:49pm</div>
-        </div>
+        <tr class="white-line" >
+          <td>12s</td>
+          <td>21 min 01 sec</td>
+          <td>4:49pm - 4:49pm</td>
+        </tr>
 
-        <div class="forth-line" >
-            <div class="first-row">12s</div>
-            <div class="second-row">21 min 01sec</div>
-            <div>4:49pm - 4:49pm</div>
-        </div>
-
-    </div>
-    
+    </table>
+   
   <div>
 </div>   
 </body>
